# coda-test-repo

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  app.py  app.yaml  app.yaml.template  app_state.py  cli_auth.py  content_filter_proxy.py  gunicorn.conf.py  install_databricks_cli.sh  install_gh.sh  install_micro.sh  pat_rotator.py  pyproject.toml  requirements.txt  setup_claude.py  setup_codex.py  setup_databricks.py  setup_gemini.py  setup_mlflow.py  setup_opencode.py  setup_proxy.py  sync_to_workspace.py  utils.py
.github/workflows/: dependency-audit.yml  release.yml  update-lockfile.yml
agents/: build-feature.md  implementer.md  prd-writer.md  test-generator.md
docs/: 2026-03-08-tmux-evaluation.md  deployment.md
docs/plans/: 2025-02-03-bundled-skills-design.md  2026-02-02-web-terminal-design.md  2026-02-02-web-terminal-implementation.md  2026-02-03-session-timeout-design.md  2026-02-03-workspace-sync-design.md  2026-03-08-multi-tab-terminals-design.md  2026-03-08-multi-tab-terminals-implementation.md  2026-03-11-litellm-empty-content-blocks-design.md  2026-03-27-pat-auto-rotation-implementation.md  PLAN-issue-8.md  (+1 more)
static/: index.html  poll-worker.js
tests/: test_app_state.py  test_cli_token_rotation.py  test_heartbeat.py  test_mlflow_tracing.py  test_npm_version_pinning.py  test_pat_rotation_integration.py  test_pat_rotator.py  test_reinit_app_git.py  test_session_detach.py  test_session_linger.py  test_upload.py  test_ws_authorization.py
why-the-miss/: README.md  agent.py  config.py  demo_notebook.py  flows.py  tools.py
(+2 files in other folders)
